--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,25 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.6.0.Beta1</version>
 		</dependency>
 	</dependencies>
 
@@ -49,6 +64,27 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+<!--			<configuration>-->
+<!--&lt;!&ndash;				<excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;					<exclude>&ndash;&gt;-->
+<!--&lt;!&ndash;						<groupId>org.projectlombok</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;						<artifactId>lombok</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;					</exclude>&ndash;&gt;-->
+<!--&lt;!&ndash;				</excludes>&ndash;&gt;-->
+
+<!--				<annotationProcessorPaths>-->
+<!--					<path>-->
+<!--						<groupId>org.projectlombok</groupId>-->
+<!--						<artifactId>lombok</artifactId>-->
+<!--						<version>1.18.32</version>-->
+<!--					</path>-->
+<!--					<path>-->
+<!--						<groupId>org.mapstruct</groupId>-->
+<!--						<artifactId>mapstruct</artifactId>-->
+<!--						<version>1.6.0.Beta1</version>-->
+<!--					</path>-->
+<!--				</annotationProcessorPaths>-->
+<!--			</configuration>-->
 		</plugins>
 	</build>
 
