--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
 			<version>6.2.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>9.37.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 
